[package]
name = "sdk_authorization_ed25519_dalek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
ed25519-dalek = { version = "1.0.1", features = ["serde", "batch"] }
sdk_types = { path = "../sdk_types" }
serde = "1.0.158"
thiserror = "1.0.40"
